--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                             </div>
                             <div>
                                 <h4 class="font-bold">Telepon/WhatsApp</h4>
-                                <a href="https://wa.me/6281234567890" class="text-gray-400 hover:text-primary-500 transition">+62 812-3456-7890</a>
+                                <a href="https://wa.me/6282138365139" class="text-gray-400 hover:text-primary-500 transition">+62 821-3836-5139</a>
                             </div>
                         </div>
                         <div class="flex items-start">
@@ -633,7 +633,7 @@
     </footer>
 
     <!-- WhatsApp Float Button -->
-    <a href="https://wa.me/6281234567890" class="fixed bottom-6 right-6 bg-green-600 hover:bg-green-700 text-white w-14 h-14 rounded-full flex items-center justify-center shadow-lg transition transform hover:scale-110">
+    <a href="https://wa.me/6282138365139" target="_blank" class="fixed bottom-6 right-6 bg-green-600 hover:bg-green-700 text-white w-14 h-14 rounded-full flex items-center justify-center shadow-lg transition transform hover:scale-110">
         <i class="fab fa-whatsapp text-2xl"></i>
     </a>
 
