feat: add assesment

--- a/index.html
+++ b/index.html
@@ -493,6 +493,23 @@
         </div>
     </section>
 
+    <!-- Cek kesiapan Section -->
+    <section id="home" class="pt-32 pb-20 px-4 bg-gradient-to-b from-dark-800 to-dark-900 min-h-screen flex items-center justify-center">
+        <div class="text-center max-w-3xl">
+          <h1 class="text-4xl md:text-5xl font-bold leading-tight mb-4">
+            Ingin Cek <span class="text-primary-500">Kesiapan Produk</span> Anda untuk Sertifikasi Halal?
+          </h1>
+          <p class="text-xl text-gray-400 mb-8">
+            Kami bantu mengevaluasi apakah produk UMKM Anda sudah siap untuk proses sertifikasi halal.
+          </p>
+          <div class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-4">
+            <a href="assesment.html" class="bg-primary-600 hover:bg-primary-700 text-white font-bold py-3 px-6 rounded-lg text-center transition duration-300 transform hover:scale-105">
+             Cek Sekarang
+            </a>
+          </div>
+        </div>
+      </section>
+
     <!-- CTA Section -->
     <section id="daftar" class="py-16 px-4 bg-gradient-to-r from-primary-800 to-primary-700">
         <div class="container mx-auto max-w-4xl text-center">
