--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
             <p class="text-gray-100 mb-8 dark:text-gray-300">
                 Isi formulir berikut dan kami akan menghubungi Anda dalam 1x24 jam.
             </p>
-            <form class="bg-light-800 dark:bg-dark-800 rounded-xl p-8 shadow-lg">
+            <form class="bg-light-800 dark:bg-dark-800 rounded-xl p-8">
                 <div class="grid md:grid-cols-2 gap-6 mb-6">
                     <div>
                         <label for="nama" class="block text-gray-300 text-left mb-2">Nama Lengkap</label>
