--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
                     Kami bantu seluruh proses, dari awal sampai sertifikat terbit.
                 </p>
                 <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4">
-                    <a href="#daftar"
+                    <a href="assesment.html"
                         class="bg-primary-600 hover:bg-primary-700 text-white font-bold py-3 px-6 rounded-lg text-center transition duration-300 transform hover:scale-105">
-                        Cek Kesiapann
+                        Cek Kesiapan
                     </a>
                 </div>
             </div>
