--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="md:w-1/2">
                 <div class="relative">
                     <div class="relative bg-white dark:bg-dark-800 rounded-xl p-2">
-                        <img src="https://images.unsplash.com/photo-1606787366850-de6330128bfc?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
+                        <img src="image_landing.png"
                             alt="Sertifikasi Halal" class="rounded-lg w-full h-auto">
                     </div>
                 </div>
