--- a/assesment.html
+++ b/assesment.html
@@ -234,7 +234,7 @@
                     </h3>
                     <p class="text-blue-700 dark:text-blue-300 text-sm">Pilih jawaban yang paling sesuai dengan kondisi
                         usaha Anda saat ini menggunakan skala berikut:</p>
-                    <div class="mt-2 grid grid-cols-5 gap-2 text-xs">
+                    <div class="flex flex-col sm:flex-row gap-2 text-xs">
                         <div class="bg-blue-100 dark:bg-blue-800/50 p-2 rounded text-center">1: Belum sama sekali</div>
                         <div class="bg-blue-100 dark:bg-blue-800/50 p-2 rounded text-center">2: Baru mulai</div>
                         <div class="bg-blue-100 dark:bg-blue-800/50 p-2 rounded text-center">3: Sudah sebagian</div>
@@ -242,6 +242,7 @@
                         <div class="bg-blue-100 dark:bg-blue-800/50 p-2 rounded text-center">5: Lengkap & terdokumentasi
                         </div>
                     </div>
+
                 </div>
             </section>
 
