--- a/assesment.html
+++ b/assesment.html
@@ -228,7 +228,7 @@
                 <p class="text-lg text-gray-600 dark:text-gray-400 mb-6">Kami bantu mengevaluasi apakah produk UMKM Anda
                     sudah siap untuk proses sertifikasi halal.</p>
                 <div
-                    class="bg-blue-50 dark:bg-blue-900/20 border border-blue-200 dark:border-blue-800 rounded-lg p-4 text-left max-w-2xl">
+                    class="mx-auto bg-blue-50 dark:bg-blue-900/20 border border-blue-200 dark:border-blue-800 rounded-lg p-4 text-left max-w-2xl">
                     <h3 class="font-bold text-blue-800 dark:text-blue-300 mb-2 flex items-center">
                         <i class="fas fa-info-circle mr-2"></i> Panduan Pengisian
                     </h3>
