--- a/assesment.html
+++ b/assesment.html
@@ -269,8 +269,8 @@
                 const savedPackage = localStorage.getItem('selectedPackage');
 
                 const packageData = JSON.parse(savedPackage);
-                const phoneNumber = '+6285795177202'; // Nomor tujuan
-                // const phoneNumber = '+6285778445682'; // Nomor tujuan
+                // const phoneNumber = '+6285795177202'; // Nomor tujuan
+                const phoneNumber = '6285778445682'; // Nomor tujuan
                 // const phoneNumber = '+6282138365139'; // Nomor tujuan
 
                 let message;
