--- a/index.html
+++ b/index.html
@@ -92,11 +92,20 @@
                         </button>
                     </div>
                 </div>
-                <div class="md:hidden">
+                <div class="md:hidden flex items-center space-x-2">
+                    <button id="theme-toggle-mobile" class="p-2 rounded-full focus:outline-none">
+                        <i class="fas fa-moon text-gray-500 dark:text-yellow-300" id="theme-icon-mobile"></i>
+                    </button>
                     <button id="menu-btn" class="text-gray-700 dark:text-gray-300 focus:outline-none">
                         <i class="fas fa-bars text-xl"></i>
                     </button>
                 </div>
+                
+                <!-- <div class="md:hidden">
+                    <button id="menu-btn" class="text-gray-700 dark:text-gray-300 focus:outline-none">
+                        <i class="fas fa-bars text-xl"></i>
+                    </button>
+                </div> -->
             </div>
             <!-- Mobile Menu -->
             <div id="mobile-menu" class="hidden md:hidden mt-4 pb-4">
@@ -105,7 +114,6 @@
                     Halal</a>
                 <a href="#proses" class="block py-2 text-gray-700 dark:text-gray-300 hover:text-primary-500">Proses
                     Kami</a>
-                <a href="#paket" class="block py-2 text-gray-700 dark:text-gray-300 hover:text-primary-500">Paket</a>
                 <a href="#faq" class="block py-2 text-gray-700 dark:text-gray-300 hover:text-primary-500">FAQ</a>
                 <a href="#kontak" class="block py-2 text-gray-700 dark:text-gray-300 hover:text-primary-500">Kontak</a>
             </div>
@@ -387,8 +395,6 @@
             </div>
         </div>
     </section>
-
-    <!-- Add this modal HTML right before the closing </body> tag -->
 <div id="assessmentModal" class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50 hidden">
     <div class="bg-white dark:bg-dark-800 rounded-xl p-6 w-full max-w-2xl mx-4 max-h-[90vh] overflow-y-auto">
         <div class="flex justify-between items-center mb-4">
@@ -1034,38 +1040,68 @@
             interval: 200
         });
 
-        document.addEventListener('DOMContentLoaded', function () {
-            const themeToggle = document.getElementById('theme-toggle');
-            const themeIcon = document.getElementById('theme-icon');
-            const html = document.documentElement;
+        // document.addEventListener('DOMContentLoaded', function () {
+        //     const themeToggle = document.getElementById('theme-toggle');
+        //     const themeIcon = document.getElementById('theme-icon');
+        //     const html = document.documentElement;
 
-            // Load preference
-            if (localStorage.getItem('theme') === 'dark' ||
-                (!localStorage.getItem('theme') && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
-                html.classList.add('dark');
-                themeIcon.classList.remove('fa-sun');
-                themeIcon.classList.add('fa-moon');
-            } else {
-                html.classList.remove('dark');
-                themeIcon.classList.remove('fa-moon');
-                themeIcon.classList.add('fa-sun');
+        //     // Load preference
+        //     if (localStorage.getItem('theme') === 'dark' ||
+        //         (!localStorage.getItem('theme') && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+        //         html.classList.add('dark');
+        //         themeIcon.classList.remove('fa-sun');
+        //         themeIcon.classList.add('fa-moon');
+        //     } else {
+        //         html.classList.remove('dark');
+        //         themeIcon.classList.remove('fa-moon');
+        //         themeIcon.classList.add('fa-sun');
+        //     }
+
+        //     themeToggle.addEventListener('click', () => {
+        //         html.classList.toggle('dark');
+        //         const isDark = html.classList.contains('dark');
+        //         localStorage.setItem('theme', isDark ? 'dark' : 'light');
+
+        //         // Toggle icon
+        //         if (isDark) {
+        //             themeIcon.classList.remove('fa-sun');
+        //             themeIcon.classList.add('fa-moon');
+        //         } else {
+        //             themeIcon.classList.remove('fa-moon');
+        //             themeIcon.classList.add('fa-sun');
+        //         }
+        //     });
+        // });
+        document.addEventListener('DOMContentLoaded', function () {
+            const html = document.documentElement;
+            const themeButtons = document.querySelectorAll('#theme-toggle, #theme-toggle-mobile');
+            const themeIcons = document.querySelectorAll('#theme-icon, #theme-icon-mobile');
+
+            function updateThemeIcon(isDark) {
+                themeIcons.forEach(icon => {
+                    icon.classList.toggle('fa-sun', !isDark);
+                    icon.classList.toggle('fa-moon', isDark);
+                });
             }
 
-            themeToggle.addEventListener('click', () => {
-                html.classList.toggle('dark');
-                const isDark = html.classList.contains('dark');
-                localStorage.setItem('theme', isDark ? 'dark' : 'light');
+            // Cek preferensi awal dari localStorage
+            const isDark = localStorage.getItem('theme') === 'dark';
+            if (isDark) {
+                html.classList.add('dark');
+            } else {
+                html.classList.remove('dark');
+            }
+            updateThemeIcon(isDark);
 
-                // Toggle icon
-                if (isDark) {
-                    themeIcon.classList.remove('fa-sun');
-                    themeIcon.classList.add('fa-moon');
-                } else {
-                    themeIcon.classList.remove('fa-moon');
-                    themeIcon.classList.add('fa-sun');
-                }
+            themeButtons.forEach(btn => {
+                btn.addEventListener('click', () => {
+                    const isNowDark = html.classList.toggle('dark');
+                    localStorage.setItem('theme', isNowDark ? 'dark' : 'light');
+                    updateThemeIcon(isNowDark);
+                });
             });
         });
+
     </script>
 </body>
 
